fix select2 z-index in overlay

--- a/src/collective/z3cform/select2/browser/static/select2-widget.css
+++ b/src/collective/z3cform/select2/browser/static/select2-widget.css
@@ -24,3 +24,15 @@ div.select2-drop div.select2-result-label span {
 div.select2-drop div.select2-result-label span.subcategory {
     margin-left: 1em;
 }
+
+.select2-search {
+    z-index: 110000 !important;
+}
+
+.select2-drop-mask {
+    z-index: 19998 !important;
+}
+
+.select2-drop {
+    z-index: 19999 !important;
+}
